--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE>
-<link  href="syntax.css" type="text/css" rel="StyleSheet"/>
+<html lang="en">
+<head>
+<link  href="static/css/syntax.css" type="text/css" rel="StyleSheet"/>
     <title>Bubblesort</title>
+</head>
+<body>
         <h1><a>Bubble Sort</a> </h1>
 <center>
-            <img src="bubble.gif"/>
+            <img src="static/gif/bubble.gif"/>
 </center>
 <h1> code </h1>
 <div class="highlight"><pre><span class="k">def</span> <span class="nf">bubblesort</span><span class="p">(</span><span class="n">lst</span><span class="p">):</span>
